--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,62 @@ body{
 .col-2{
     width: 70%;
 }
+/* barra conversazione  */
+
+.utente-conversazion {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: gray;
+    padding: 5px;
+    height: 50px;
+}
+
+.img-utente-conversazione {
+    display: flex;
+    align-items: center;
+}
+
+.img-utente-conversazione img {
+    width: 35px;
+    border-radius: 50%;
+    margin: 0 8px;
+}
+
+.icone-utente-conversazione i {
+    margin: 0 5px;
+}
+/* //barra conversazione  */
+
+/* main section  */
+main{
+    background-image: url('/img/mine.jpg');
+    background-size: contain;
+    height: calc(100% - 100px);
+}
+/* ///main section  */
+
+/* footer section  */
+footer{
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    align-items: center;
+    height: 50px;
+    width: 100%;
+    background-color:#F3EEEA;
+}
+
+footer input{
+    height: 40px;
+    width: 85%;
+}
+footer i{
+    margin: 0 5px;
+}
+/* footer section  */
+
+
 /* ///col2 styling  */
 
 
