--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,11 @@ body{
 
 .col-1{
     width: 30%;
-    height: 100%
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    border-right: 0.1px solid #D7D7D7;
+    
 
 }
 
@@ -39,7 +43,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: gray;
+    background-color: #EAEAEA;
     padding: 5px;
     height: 50px;
 }
@@ -121,6 +125,12 @@ body{
 /* ///search bar  */
 
 /* elenco contatti  */
+.container-contatti{
+    overflow-y: scroll;
+    height: inherit;
+    
+
+}
 .elenco-contatti{
     display: flex;
     align-items: center;
@@ -177,7 +187,20 @@ main{
     background-image: url('/img/mine.jpg');
     background-size: contain;
     height: calc(100% - 100px);
+    overflow-y: scroll;
 }
+
+/* message section  */
+.sent{
+    background-color: green;
+}
+
+.received{
+    background-color: white;
+}
+/* //message section  */
+
+
 /* ///main section  */
 
 /* footer section  */
