--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ main {
 }
 
 .sent {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -240,6 +241,7 @@ main {
 
 
 .received {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -325,4 +327,35 @@ footer i {
 
 .none{
     display: none;
+}
+
+
+/* dorpdown  */
+.dropdown{
+  display: none;
+  width: 100%;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown li{
+    text-decoration: none;
+    list-style: none;
+    padding: 10px;
+}
+
+.dropdown li:hover{
+    background-color: rgba(128, 128, 128, 0.219);
+}
+
+.dropdown li:active{
+    transform: scale(0.97);
+}
+
+.display-flex{
+    display: flex;
 }
